--- a/Todolist/index.html
+++ b/Todolist/index.html
@@ -7,11 +7,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-    
+
     <title>Todo-List</title>
 </head>
 <body>
-    <h1>Content</h1>
+    <main>
+        <header>
+            <h1>Eric's Todo-List</h1>
+        </header>
+    </main>
+    <footer>
+        &copy; 2020, All rights reserved.
+    </footer>
 
     <script src="./app.js"></script>
 </body>
