--- a/Todolist/index.html
+++ b/Todolist/index.html
@@ -15,6 +15,8 @@
         <header>
             <h1>Eric's Todo-List</h1>
         </header>
+
+        <form action="/todo" method="POST"></form>
     </main>
     <footer>
         &copy; 2020, All rights reserved.
