--- a/Todolist/index.html
+++ b/Todolist/index.html
@@ -12,12 +12,21 @@
 </head>
 <body>
     <main>
+
+        <!-- Heading Section-->
         <header>
             <h1>Eric's Todo-List</h1>
         </header>
 
-        <form action="/todo" method="POST"></form>
+
+        <!--Form section-->
+
+        <form action="/todo" method="POST">
+        </form>
     </main>
+
+
+    <!--Footer section-->
     <footer>
         &copy; 2020, All rights reserved.
     </footer>
