ADD input box and button

--- a/Todolist/index.html
+++ b/Todolist/index.html
@@ -22,6 +22,8 @@
         <!--Form section-->
 
         <form action="/todo" method="POST">
+            <input type="text" name="input-box" class="todo-input">
+            <button type="submit" class="todo-button"></button>
         </form>
     </main>
 
