ADD value on button

--- a/Todolist/index.html
+++ b/Todolist/index.html
@@ -23,7 +23,7 @@
 
         <form action="/todo" method="POST">
             <input type="text" name="input-box" class="todo-input">
-            <button type="submit" class="todo-button"></button>
+            <button type="submit" class="todo-button" value="Add Todo"></button>
         </form>
     </main>
 
