ADD font awesome on button

--- a/Todolist/index.html
+++ b/Todolist/index.html
@@ -23,7 +23,9 @@
 
         <form action="/todo" method="POST">
             <input type="text" name="input-box" class="todo-input">
-            <button type="submit" class="todo-button" value="Add Todo"></button>
+            <button type="submit" class="todo-button"> 
+                <i fas fa-plus-square></i>
+            </button>
         </form>
     </main>
 
