--- a/Todolist/index.html
+++ b/Todolist/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./style.css" media="screen">
+    <link rel="stylesheet" href="./style.css" media="screen" />
     <title>Todo-List</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
         <form action="/todo" method="POST">
             <input type="text" name="input-box" class="todo-input">
             <button type="submit" class="todo-button"> 
-                <i fas fa-plus-square></i>
+                <i class="fas fa-plus-square"></i>
             </button>
         </form>
 
