remove unwanted div

--- a/Todolist/index.html
+++ b/Todolist/index.html
@@ -20,7 +20,7 @@
 
         <!--Form section-->
 
-        <form action="/todo" method="POST">
+        <form>
             <input type="text" name="input-box" class="todo-input">
             <button type="submit" class="todo-button"> 
                 <i class="fas fa-plus-square"></i>
@@ -31,7 +31,8 @@
             <ul class="todo-list">
                 <div class="todo">
                     <li></li>
-                    <button></button>
+                    <button>Delete</button>
+                    <button>Checked</button>
                 </div>
             </ul>
         </div>
